<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4f5ff"
    tools:context=".ui.CategoriesActivity">

    <View
        android:id="@+id/vHeader"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:background="#0094f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activities"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vHeader"
        app:layout_constraintEnd_toEndOf="@+id/vHeader"
        app:layout_constraintStart_toStartOf="@+id/vHeader"
        app:layout_constraintTop_toTopOf="@id/vHeader" />

    <TextView
        android:id="@+id/activityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vHeader"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintVertical_bias="0.12"
        tools:text="Learn how to play a new sport" />

    <TextView
        android:id="@+id/textParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantsText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityText" />


    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/priceText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_baseline_attach_money_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textParticipants" />

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_format_list_bulleted_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textPrice"
        app:layout_constraintTop_toBottomOf="@+id/textPrice"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textParticipantsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantValue"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textParticipants"
        app:layout_constraintTop_toBottomOf="@+id/activityText" />

    <TextView
        android:id="@+id/textPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/priceValue"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textParticipantsValue"
        app:layout_constraintStart_toStartOf="@+id/textParticipantsValue"
        app:layout_constraintTop_toBottomOf="@+id/textParticipantsValue" />

    <Button
        android:id="@+id/bttn_try_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>